--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@supabase/supabase-js": "^2.49.7",
+    "date-fns": "^4.1.0",
+    "downshift": "^9.0.9",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-to-print": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
