--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@supabase/supabase-js": "^2.49.7",
     "date-fns": "^4.1.0",
     "downshift": "^9.0.9",
+    "lucide-react": "^0.514.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-to-print": "^3.1.0"
+    "react-to-print": "^3.1.0",
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
